--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
             <h3 class="text-shadow">Create beautiful and unique blogs. It's easy and free</h3>
             <img src="./images/publishIdeas.svg" alt="" height="300px" width="300px">
         </div>
-        <a href="/signup" class="content_button">Get started</a>
+        <a href="<%= user?'/createBlog':'/signup' %>" class="content_button">Get started</a>
     </div>
 </header>
 
