--- a/views/createBlogs.ejs
+++ b/views/createBlogs.ejs
@@ -8,7 +8,7 @@
         <label for="description">Description<span style="color: lightcoral;">*</span></label>
         <textarea name="description" id="description" cols="48" rows="10"
             placeholder="Roses are red, violets are blue, I know basic math, one plus one is two" required
-            style="resize: none;text-align: left;font-size: large;border-radius: 3%;padding: 0.5em;"></textarea>
+            style="resize: none;text-align: left;font-size: large;border-radius: 3%;padding: 0.5em;" spellcheck="true"></textarea>
 
         <div class="blog-category">
             <label for="category">Category</label>
