--- a/public/styles.css
+++ b/public/styles.css
@@ -501,10 +501,22 @@ form button:hover {
   margin-left: 1em;
 }
 
-.like {
+.like-comment {
+  display: flex;
+}
+
+.like, .comment {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+}
+
+.no-blogs {
+  background-color:  var(--blog-bg);
+  color: var(--blog-color);
+
+  width: 100%;
+  height: 100%;
 }
 
 footer {
