--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -95,9 +95,15 @@
                             <h3>${ele.title}</h3>
                             <p>${ele.description}</p>
                         </div>
-                        <div class="like">
-                            <i class="far fa-heart" data-blogid=${ele._id}></i>
-                            <p style="margin: 0 1em;">${ele.likes}%> </p>
+                        <div class="like-comment">
+                            <div class="like">
+                                <i class="far fa-heart" data-blogid=${ele._id}></i>
+                                <p style="margin: 0 1em 0 0.5em;">${ele.likes}%> </p>
+                            </div>
+                            <div class="comment">
+                                <a href="/comment/${ele._id}"><i class="fas fa-comment-alt"></i></a>
+                                <p style="margin: 0 1em 0 0.5em;">${ele.comments}%> </p>
+                            </div>
                         </div>
                     </div>
                     `;
@@ -106,6 +112,12 @@
                 }
 
             })
+
+            blogs.innerHTML = blogs.innerHTML || `
+                <div class="noblogs">
+                    <h1>No blogs created yet!</h1>
+                    <p>Why not be the first to the blog? <a href="/createBlog">Create blog</a> </p>
+                </div>`
 
             const likes = document.querySelectorAll('.fa-heart');
             Array.from(likes).forEach((ele) => {
