--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -5,18 +5,28 @@
         <a href="/blogs" id="back-to-blogs-link" class="content_button">Back to blogs</a>
     </div>
     <div id="comments">
-        <!-- The comments go here :) -->
+        <% comments.forEach(comment => { %>
+            
+            <div>
+                <div class="user-detail">
+                    <img src="" onerror="this.src='../images/animals/female-lion.svg'" alt="Profile pic"
+                        width="80px" height="80px" style="border-radius: 50%; display: block;">
+                    <div class="user-text">
+                        <h2><%= comment.username %> </h2>
+                        <p><%= comment.comment  %> </p>
+                    </div>
+                </div>
+            </div>
+        <% }); %> 
     </div>
     <div id="post-comments">
-        <form id="post-comment-form" action="/comments/post" method="post">
+        <form id="post-comment-form" action="/comment/<%= blog_id %> " method="post">
             <textarea name="comment" id="comment" cols="48" rows="1"
             placeholder="What are your thoughts ?" required
             style="resize: none;text-align: left;font-size: large;border-radius: 3%;padding: 0.5em;" spellcheck="true"></textarea>
 
-            <input type="hidden" name="blog_id" value="<%- blog_id %>">
-            <input type="hidden" name="user_id" value="<%- user._id %>">
-            <input type="hidden" name="username" value="<%- user.userName %>">
-
+            <input type="hidden" name="username" value="<%= user.userName %>">
+            <input type="hidden" name="profile" values="<%= user.profile %> ">
             <input type="submit" value="Post">
         </form>
     </div>
