--- a/public/styles.css
+++ b/public/styles.css
@@ -227,7 +227,7 @@ form h2 {
 
 form {
   max-width: 540px;
-  margin: 4rem 0 0 3rem;
+  /* margin: 4rem 0 0 3rem; */
   padding: 30px;
   box-shadow: 1px 2px 10px 10px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
