--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -2,7 +2,7 @@
 
 <div id="comments-container">
     <div id="back-to-blogs">
-        <a href="/blogs" id="back-to-blogs-link" class="content_button">< Back to blogs</a>
+        <a href="/blogs" id="back-to-blogs-link" class="content_button">&lt; Back to blogs</a>
     </div>
     <div id="comments">
        <% if (comments) { %>
@@ -12,7 +12,7 @@
             
             <div class="comment-box">
                 <div class="user-detail">
-                    <img src="" onerror="this.src='../images/animals/female-lion.svg'" alt="Profile pic"
+                    <img src="../<%= comment.profile %>" onerror="this.src='../images/animals/female-lion.svg'" alt="Profile pic"
                         width="80px" height="80px" style="border-radius: 50%; display: block;">
                     <div class="user-text">
                         <h2><%= comment.username %> </h2>
@@ -21,7 +21,7 @@
                 </div>
             </div>
         <%}); } else { %>
-            <h2>No comments posted yet.....</h2>
+            <h2>No comments posted yet...</h2>
          <% }%>
           
     </div>
@@ -32,7 +32,7 @@
             style="resize: none;text-align: left;font-size: large;border-radius: 5px;padding: 0.5em; border: none;" spellcheck="true"></textarea>
 
             <input type="hidden" name="username" value="<%= user.userName %>">
-            <input type="hidden" name="profile" values="<%= user.profile %> ">
+            <input type="hidden" name="profile" value="<%= user.profile %> ">
             <input type="submit" value="Post" style="color: aliceblue;">
         </form>
     </div>
